--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -15,10 +15,40 @@
     <%= form.label :person_name, style: "display: block" %>
     <%= form.text_field :person_name %>
   </div>
+  
+  <div>
+    <%= form.label :cnpj_cpf, style: "display: block" %>
+    <%= form.text_field :cnpj_cpf %>
+  </div>
+  
+  <div>
+    <%= form.label :state, style: "display: block" %>
+    <%= form.text_field :state %>
+  </div>
+  
+  <div>
+    <%= form.label :email, style: "display: block" %>
+    <%= form.text_field :email %>
+  </div>
+  
+  <div>
+    <%= form.label :phone_number, style: "display: block" %>
+    <%= form.text_field :phone_number %>
+  </div>
+  
+  <div>
+    <%= form.label :person_type, style: "display: block" %>
+    <%= form.text_field :person_type %>
+  </div>
 
   <div>
     <%= form.label :address, style: "display: block" %>
     <%= form.text_field :address %>
+  </div>
+  
+  <div>
+    <%= form.label :address_number, style: "display: block" %>
+    <%= form.text_field :address_number %>
   </div>
 
   <div>
