--- a/app/views/boletos/index.html.erb
+++ b/app/views/boletos/index.html.erb
@@ -11,4 +11,4 @@
   <% end %>
 </div>
 
-<%= link_to "New boleto", new_boleto_path %>
+<%= link_to "New boleto", new_boleto_path, class:"btn btn-primary" %>
