--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: cliente) do |form| %>
+<%= form_for(@cliente, html: { class: "form-horizontal", role: "form" }) do |form| %>
   <% if cliente.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(cliente.errors.count, "error") %> prohibited this cliente from being saved:</h2>
@@ -14,83 +14,79 @@
   <div class="row">
     <div class="form-group">
       <%= form.label :person_name, 'Person Name:', style: "display: block" %>
-      <div class="col-md-8 col-sm-8">
+      <div class="col-md-8 col-sm-10">
         <%= form.text_field :person_name, class: 'form-control' %>
       </div>
     </div>
-    <div class="form-group">
-      <%= form.label :person_name, 'Person Name:', style: "display: block" %>
-      <div class="col-md-8 col-sm-8">
-        <%= form.text_field :person_name, class: 'form-control' %>
-      </div>
-    </div>
-   </div>
-  
     <div class="form-group">
       <%= form.label :cnpj_cpf, 'CNPJ/CPF:', style: "display: block" %>
       <div class="col-md-8 col-sm-8">
         <%= form.text_field :cnpj_cpf, class: 'form-control' %>
       </div>
     </div>
-    
-    <div class="form-group">
-      <%= form.label :state, 'State:', style: "display: block" %>
-      <div class="col-md-8 col-sm-8">
-        <%= form.text_field :state, class: 'form-control' %>
-      </div>
-    </div>
-    
     <div class="form-group">
       <%= form.label :phone_number, 'Phone Number:', style: "display: block" %>
       <div class="col-md-8 col-sm-8">
         <%= form.text_field :phone_number, class: 'form-control' %>
       </div>
     </div>
-    
-    <div class="form-group">
-      <%= form.label :person_type, 'Person Type:', style: "display: block" %>
-      <div class="col-md-8 col-sm-8">
-        <%= form.text_field :person_type, class: 'form-control' %>
-      </div>
+  </div>
+  <div class="form-group">
+    <%= form.label :state, 'State:', style: "display: block" %>
+    <div class="col-md-8 col-sm-8">
+      <%= form.text_field :state, class: 'form-control' %>
     </div>
+  </div>  
+  
+  <div class="form-group">
+    <%= form.label :person_type, 'Person Type:', style: "display: block" %>
+    <div class="col-md-8 col-sm-8">
+      <%= form.text_field :person_type, class: 'form-control' %>
+    </div>
+  </div>
 
-    <div class="form-group">
-      <%= form.label :address, 'Address:', style: "display: block" %>
-      <div class="col-md-8 col-sm-8">
-        <%= form.text_field :address, class: 'form-control' %>
-      </div>
+  <div class="form-group">
+    <%= form.label :address, 'Address:', style: "display: block" %>
+    <div class="col-md-8 col-sm-8">
+      <%= form.text_field :address, class: 'form-control' %>
     </div>
-    
-    <div class="form-group">
-      <%= form.label :address_number, 'Address Number:', style: "display: block" %>
-      <div class="col-md-8 col-sm-8">
-        <%= form.text_field :address_number, class: 'form-control' %>
-      </div>
+  </div>
+  
+  <div class="form-group">
+    <%= form.label :address_number, 'Address Number:', style: "display: block" %>
+    <div class="col-md-8 col-sm-8">
+      <%= form.text_field :address_number, class: 'form-control' %>
     </div>
+  </div>
 
-    <div class="form-group">
-      <%= form.label :neighborhood, 'Neighborhood:', style: "display: block" %>
-      <div class="col-md-8 col-sm-8">
-        <%= form.text_field :neighborhood, class: 'form-control' %>
-      </div>
+  <div class="form-group">
+    <%= form.label :neighborhood, 'Neighborhood:', style: "display: block" %>
+    <div class="col-md-8 col-sm-8">
+      <%= form.text_field :neighborhood, class: 'form-control' %>
     </div>
+  </div>
 
-    <div class="form-group">
-      <%= form.label :zipcode, 'Zip Code:', style: "display: block" %>
-      <div class="col-md-8 col-sm-8">
-        <%= form.text_field :zipcode, class: 'form-control' %>
-      </div>
+  <div class="form-group">
+    <%= form.label :zipcode, 'Zip Code:', style: "display: block" %>
+    <div class="col-md-8 col-sm-8">
+      <%= form.text_field :zipcode, class: 'form-control' %>
     </div>
+  </div>
 
-    <div class="form-group">
-      <%= form.label :city_name, 'City Name:', style: "display: block" %>
-      <div class="col-md-8 col-sm-8">
-        <%= form.text_field :city_name, class: 'form-control' %>
-      </div>
+  <div class="form-group">
+    <%= form.label :city_name, 'City Name:', style: "display: block" %>
+    <div class="col-md-8 col-sm-8">
+      <%= form.text_field :city_name, class: 'form-control' %>
     </div>
+  </div>
 
-    <div>
-      <%= form.submit 'Save', class: 'btn btn-primary' %>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <%= form.submit class: "btn btn-primary" %>
     </div>
+  </div>
  
 <% end %>
+  
+    
+    
